--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,5 +1,12 @@
-@import "./components/header";
-@import "./components/hero";
 @import "./components/container";
-@import "./components/button";
-@import "./components/footer";
+@import "./components/module-1";
+@import "./components/module-2";
+@import "./components/module-3";
+@import "./components/module-4";
+@import "./components/module-5";
+@import "./components/module-6";
+@import "./components/module-7";
+@import "./components/module-8";
+@import "./components/module-9";
+@import "./components/module-10";
+@import "./components/module-11";
