--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,12 +1,12 @@
 @import "./components/container";
-@import "./components/module-1";
-@import "./components/module-2";
-@import "./components/module-3";
-@import "./components/module-4";
-@import "./components/module-5";
-@import "./components/module-6";
-@import "./components/module-7";
-@import "./components/module-8";
-@import "./components/module-9";
-@import "./components/module-10";
-@import "./components/module-11";
+@import "./components/module-one";
+@import "./components/module-two";
+@import "./components/module-three";
+@import "./components/module-four";
+@import "./components/module-five";
+@import "./components/module-six";
+@import "./components/module-seven";
+@import "./components/module-eight";
+@import "./components/module-nine";
+@import "./components/module-ten";
+@import "./components/module-eleven";
