--- a/src/partials/module-one.html
+++ b/src/partials/module-one.html
@@ -1,4 +1,4 @@
-<section class="js__one">
+<section class="js__one container">
   <h1 class="js__one-h1">Знакомство с JavaScript</h1>
   <p class="js__title">
     Когда мы говорим о программировании, первое, что приходит в голову это набор
