--- a/src/partials/module-one.html
+++ b/src/partials/module-one.html
@@ -24,4 +24,5 @@
     для достижения результата. Когда вы привыкнете выстраивать решение задачи в
     виде алгоритма, язык программирования будет всего лишь инструментом.
   </p>
+  <script src="../js/module-one.js"></script>
 </section>
