--- a/src/partials/module-one.html
+++ b/src/partials/module-one.html
@@ -1,1 +1,19 @@
-<section class="section">Lorem ipsum dolor sit amet.</section>
+<section class="one container">
+  <div class="box">
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis sit vero
+    repellat, iste ratione praesentium nihil facilis eos optio facere expedita
+    esse ipsa eveniet tempora deserunt quia nostrum eum quasi exercitationem
+    quis distinctio itaque nisi explicabo ea. Velit possimus ut tenetur
+    perferendis? Alias minima recusandae, animi dolorum quis ea repellendus?
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis sit vero
+    repellat, iste ratione praesentium nihil facilis eos optio facere expedita
+    esse ipsa eveniet tempora deserunt quia nostrum eum quasi exercitationem
+    quis distinctio itaque nisi explicabo ea. Velit possimus ut tenetur
+    perferendis? Alias minima recusandae, animi dolorum quis ea repellendus?
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis sit vero
+    repellat, iste ratione praesentium nihil facilis eos optio facere expedita
+    esse ipsa eveniet tempora deserunt quia nostrum eum quasi exercitationem
+    quis distinctio itaque nisi explicabo ea. Velit possimus ut tenetur
+    perferendis? Alias minima recusandae, animi dolorum quis ea repellendus?
+  </div>
+</section>
