--- a/src/sass/components/_container.scss
+++ b/src/sass/components/_container.scss
@@ -1,6 +1,8 @@
 .container {
-    padding-left: 20px;
-    padding-right: 20px;
+    max-width: 1200px;
+    width: 100%;
+    padding-left: 15px;
+    padding-right: 15px;
     margin: 0 auto;
 
     @media screen and (min-width: 480px) {
