--- a/src/sass/utils/variables.scss
+++ b/src/sass/utils/variables.scss
@@ -14,7 +14,7 @@ body {
     font-family: JetBrains Mono;
     font-size: 20px;
     font-style: normal;
-    color: #fcfcfc;
+    color: var(--white-bg-color);
 }
 
 html {
