--- a/src/sass/utils/variables.scss
+++ b/src/sass/utils/variables.scss
@@ -16,7 +16,13 @@ body {
     font-style: normal;
     color: var(--white-bg-color);
 }
-
+.box {
+    border: 1px solid var(--border-color);
+    border-radius: 8px;
+    margin-top: 20px;
+    backdrop-filter: blur(100px);
+    padding: 10px 20px;
+}
 html {
     box-sizing: border-box;
 }
